--- a/composer.json
+++ b/composer.json
@@ -1,84 +1,21 @@
 {
-    "name": "Payro/payment",
+    "name": "payro/payment",
     "type": "library",
     "description": "Laravel Payment Gateway for Payro24",
     "keywords": [
-        "Payro",
+        "payro",
         "gateway",
         "bank",
         "payment",
         "payment gateway",
-        "laravel payment package",
-        "laravel payment gateway",
-        "iranKish payment gateway",
-        "laravel iranKish package",
-        "laravel iranKish",
-        "irankish",
-        "jahanPay payment gateway",
-        "laravel jahanPay package",
-        "laravel jahanPay",
-        "jahanpay",
-        "jibit payment gateway",
-        "laravel jibit package",
-        "laravel jibit",
-        "jibit",
-        "mellat payment gateway",
-        "laravel mellat package",
-        "laravel mellat",
-        "mellat",
-        "parsian payment gateway",
-        "laravel parsian package",
-        "laravel parsian",
-        "parsian",
-        "pasargad payment gateway",
-        "laravel pasargad package",
-        "laravel pasargad",
-        "pasargad",
-        "pay payment gateway",
-        "laravel pay package",
-        "laravel pay",
-        "pay",
-        "payline payment gateway",
-        "laravel payline package",
-        "laravel payline",
-        "payline",
-        "sadad payment gateway",
-        "laravel sadad package",
-        "laravel sadad",
-        "sadad",
-        "saderat payment gateway",
-        "laravel saderat package",
-        "laravel saderat",
-        "saderat",
-        "saman payment gateway",
-        "laravel saman package",
-        "laravel saman",
-        "saman",
-        "zarinpal payment gateway",
-        "laravel zarinpal package",
-        "laravel zarinpal",
-        "zarinpal",
-        "shaparak payment gateway",
-        "laravel shaparak package",
-        "laravel shaparak",
-        "shaparak",
-        "meli payment gateway",
-        "laravel meli package",
-        "laravel meli",
-        "meli",
-        "laravel melli bank payment package",
-        "melli",
-        "paypal payment gateway",
-        "laravel paypal package",
-        "laravel paypal",
-        "paypal"
+        "laravel payment package"
     ],
     "homepage": "https://github.com/Payro/payment",
     "license": "MIT",
     "authors": [
         {
-            "name": "Mahdi Khanzadi",
-            "email": "khanzadimahdi@gmail.com",
+            "name": "Matin Rezaee",
+            "email": "matinrezaii777@gmail.com",
             "homepage": "https://github.com/Payro",
             "role": "Developer"
         }
