--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "ramsey/uuid": "^3.8"
+        "php": ">=7.2"
     },
     "require-dev": {
         "orchestra/testbench": ">=4.3 <5.0",
         "illuminate/broadcasting": ">=5.8 <7.0",
         "illuminate/support": ">=5.8 <7.0",
         "guzzlehttp/guzzle": ">=6.2",
+        "ramsey/uuid": "^3.8",
         "phpunit/phpunit": ">=8.0 <9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
